--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </head>
     <body>
         <div id="map">
+            <div>Гидромодульные районы Казахстана</div>
             <div id="popup" class="ol-popup">
                 <a href="#" id="popup-closer" class="ol-popup-closer"></a>
                 <div id="popup-content"></div>
@@ -66,3 +67,4 @@
         <script src="./resources/qgis2web.js"></script>
     </body>
 </html>
+
