--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </head>
     <body>
         <div id="map">
-            <div>Гидромодульные районы Казахстана</div>
+            <div><title>Гидромодульные районы Казахстана</title></div>
             <div id="popup" class="ol-popup">
                 <a href="#" id="popup-closer" class="ol-popup-closer"></a>
                 <div id="popup-content"></div>
@@ -67,4 +67,5 @@
         <script src="./resources/qgis2web.js"></script>
     </body>
 </html>
+
 
